modify server
